Code reformatting for the get associated agents API